[gd_scene load_steps=6 format=3 uid="uid://beyuvc6fhqhqh"]

[ext_resource type="Script" uid="uid://bevb8xpo8j0vu" path="res://scripts/buttons.gd" id="1_ucbop"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efub3"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ucbop"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_8id1s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmbvj"]
bg_color = Color(0, 0, 0, 1)

[node name="jimmymenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ucbop")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_efub3")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 209.0
offset_right = 692.0
offset_bottom = 272.0
theme_override_font_sizes/font_size = 45
text = "Jimmy Clicekr ðŸ˜³ðŸ˜³ðŸ˜³"
label_settings = SubResource("LabelSettings_ucbop")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 276.0
offset_right = 673.0
offset_bottom = 400.0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_8id1s")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_wmbvj")
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_8id1s")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_wmbvj")
text = "Options
"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_8id1s")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_wmbvj")
text = "Credits
"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
